# ISRL

./: .gitignore  pyproject.toml
analysis/inctv/: compare_across_params.R
src/isrl/: __init__.py
src/isrl/model/: __init__.py  cvtm.py  extm.py  hstm.py  isrl.py
src/isrl/sim/: __init__.py  goal_directed.py  incentive_learning.py
